[tool.poetry]
name = "cumcm2023"
version = "0.1.0"
description = "CUMCM2023C题代码"
authors = ["flpflan <2104357372@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
jsonpickle = "^3.0.1"
serde = "^0.9.0"
pandas = "^2.0.3"
xlwings = "^0.30.10"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
xlrd = "^2.0.1"
pyecharts = "^2.0.3"
scipy = "^1.11.1"
openpyxl = "^3.1.2"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
